# aws-access-lib

./: .gitignore  README.md  pyproject.toml
framework/athena/: repository.py
framework/model/: feature.py
framework/repo/: __init__.py  featureaccess.py
framework/s3/: access.py
tests/featureaccess/: test_feature.py
tests/s3/: test_s3.py
tests/s3/fixtures/mock_folder/: bar.json  foo.json
